syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/rewards";
package messages.rewards;

message Reward {
	message Image {
		string url_1x = 1;
		string url_2x = 2;
		string url_4x = 3;
	}

	message MaxPerStreamSettings {
		bool is_enabled = 1;
		uint64 max_per_stream = 2;
	}

	message MaxPerUserPerStreamSettings {
		bool is_enabled = 1;
		uint64 max_per_stream = 2;
	}

	message GlobalCooldownSettings {
		bool is_enabled = 1;
		uint64 global_cooldown_seconds = 2;
	}

	string id = 1;
	string title = 2;
	string prompt = 3;
	uint64 cost = 4;
	Image image = 5;
	string background_color = 6;
	Image default_image = 7;
	bool is_enabled = 8;
	bool is_user_input_required = 9;
	MaxPerStreamSettings max_per_stream_setting = 10;
	MaxPerUserPerStreamSettings max_per_user_per_stream_setting = 11;
	GlobalCooldownSettings global_cooldown_setting = 12;
	bool is_paused = 13;
	bool is_in_stock = 14;
	bool should_redemptions_skip_request_queue = 15;
	uint64 redemptions_redeemed_current_stream = 16;
	string cooldown_expires_at = 17;
}

message GetResponse {
	repeated Reward rewards = 1;
}
